# neural_network_builder

./: CMakeLists.txt
gui/: CMakeLists.txt  CustomEdgeHana.qml  CustomNode.qml  CustomNodeHana.qml  CustomRoundNode.qml  Main.qml  OutputPane.qml  custom_edge.cpp  custom_edge.h  custom_node.cpp  custom_node.h  graph.cpp  graph.h  main.cpp  menu.cpp  menu.h  network_builder.cpp  network_builder.h  theme.qrc
interface/: CMakeLists.txt  CustomNodeBlue.qml  CustomNodePurple.qml  Main.qml  chart.cpp  chart.h  custom_node.cpp  custom_node.h  main.cpp  network_builder.cpp  network_builder.h
neural_network/: CMakeLists.txt  activation_function.cpp  activation_function.h  layer.cpp  layer.h  network.cpp  network.h  neuron.cpp  neuron.h
nn_moj/: CMakeLists.txt  activation_function.cpp  activation_function.h  activation_functions.h  layer.cpp  layer.h  network.cpp  network.h  neuron.cpp  neuron.h
test_neural_network/: CMakeLists.txt  test.cpp
test_nn/: CMakeLists.txt  test01.cpp  test01.h
